--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,9 @@
 				"ms-python.isort",
 				"ms-python.vscode-pylance",
 				"ms-python.python",
-				"ms-python.debugpy"
+				"ms-python.debugpy",
+				"mtxr.sqltools",
+				"mongodb.mongodb-vscode"
 			]
 		}
 	}
