--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 apiflask
 #Gunicorn is a production http server add multithreading in pools -> https://gunicorn.org/
 gunicorn
+#Black formater
+black
 #The rest is library needed for the connector -> https://requests.readthedocs.io/en/latest/
 requests
 # Proposition for oauth support -> https://docs.authlib.org/en/latest/basic/install.html
